--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ verify_ssl = true
 python_version = "3.12"
 
 [packages]
-mu-pipelines-interfaces = {version = "==0.1.2", index = "gitlab"}
+mu-pipelines-interfaces = ">=0.1.4"
 
 [dev-packages]
 flit = "*"
@@ -23,4 +23,4 @@ mypy = "*"
 pre-commit = "*"
 pytest = "*"
 pytest-cov = "*"
-pyspark = "*"
+pyspark = "==3.5.4"
