--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,19 @@ build-backend = "flit_core.buildapi"
 [project]
 name = "mu_pipelines_execute_spark"
 authors = [
-    {name = "MosaicSoft", email = "josh.m.reilly@gmail.com"},
+    {name = "MosaicSoft", email = "mupipelines@gmail.com"},
 ]
 description = "mu_pipelines_execute_spark"
 readme = "README.md"
 requires-python = ">=3.11"
-keywords = ["mu"]
-license = {text = "unlicensed"}
+keywords = ["data movement", "spark", "etl"]
+license = {file = "LICENSE"}
 classifiers = [
     "Programming Language :: Python :: 3",
 ]
 dependencies = [
-    
+    "mu-pipelines-interfaces >=0.1.4",
+    "pyspark >=3.5.0",
 ]
 dynamic = ["version"]
 
@@ -27,6 +28,9 @@ dynamic = ["version"]
 [tool.pyright]
 venvPath = "."
 venv = ".venv"
+
+[project.urls]
+documentation = "https://mosaicsoft-data.github.io/mu-pipelines-doc/"
 
 # ... other project metadata fields as specified in:
 #     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
